// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Button snapshots with default props 1`] = `
<div>
  <button
    accessibility="label"
    class="sc-bcHOTY sc-dkHyXG gSYMYh"
    id="label"
    variant="primary"
  >
    <p
      class="sc-gsMHZj lbQZYp sc-hLljAB cvQGLR"
    >
      Text
    </p>
  </button>
</div>
`;

exports[`Component: Button snapshots with loading 1`] = `
<div>
  <button
    accessibility="label"
    class="sc-bcHOTY sc-dkHyXG GrQnq"
    disabled=""
    id="label"
    variant="primary"
  >
    <div
      aria-label="Aguarde..."
      id="loading"
      style="width: 60px; height: 60px;"
    >
      <svg
        height="375"
        preserveAspectRatio="xMidYMid meet"
        style="width: 100%; height: 100%; transform: translate3d(0,0,0);"
        viewBox="0 0 375 375"
        width="375"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <clippath
            id="__lottie_element_2"
          >
            <rect
              height="375"
              width="375"
              x="0"
              y="0"
            />
          </clippath>
        </defs>
        <g
          clip-path="url(#__lottie_element_2)"
        >
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,223.83999633789062,205.83999633789062)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,-100.83999633789062,-18.84000015258789)"
            >
              <path
                d=" M0,-21.65999984741211 C11.954154014587402,-21.65999984741211 21.65999984741211,-11.954154014587402 21.65999984741211,0 C21.65999984741211,11.954154014587402 11.954154014587402,21.65999984741211 0,21.65999984741211 C-11.954154014587402,21.65999984741211 -21.65999984741211,11.954154014587402 -21.65999984741211,0 C-21.65999984741211,-11.954154014587402 -11.954154014587402,-21.65999984741211 0,-21.65999984741211z"
                fill="rgb(255,255,255)"
                fill-opacity="1"
              />
            </g>
          </g>
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,287.8399963378906,205.83999633789062)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,-100.83999633789062,-18.84000015258789)"
            >
              <path
                d=" M0,-21.65999984741211 C11.954154014587402,-21.65999984741211 21.65999984741211,-11.954154014587402 21.65999984741211,0 C21.65999984741211,11.954154014587402 11.954154014587402,21.65999984741211 0,21.65999984741211 C-11.954154014587402,21.65999984741211 -21.65999984741211,11.954154014587402 -21.65999984741211,0 C-21.65999984741211,-11.954154014587402 -11.954154014587402,-21.65999984741211 0,-21.65999984741211z"
                fill="rgb(255,255,255)"
                fill-opacity="1"
              />
            </g>
          </g>
          <g
            opacity="1"
            style="display: block;"
            transform="matrix(1,0,0,1,351.8399963378906,205.83999633789062)"
          >
            <g
              opacity="1"
              transform="matrix(1,0,0,1,-100.83999633789062,-18.84000015258789)"
            >
              <path
                d=" M0,-21.65999984741211 C11.954154014587402,-21.65999984741211 21.65999984741211,-11.954154014587402 21.65999984741211,0 C21.65999984741211,11.954154014587402 11.954154014587402,21.65999984741211 0,21.65999984741211 C-11.954154014587402,21.65999984741211 -21.65999984741211,11.954154014587402 -21.65999984741211,0 C-21.65999984741211,-11.954154014587402 -11.954154014587402,-21.65999984741211 0,-21.65999984741211z"
                fill="rgb(255,255,255)"
                fill-opacity="1"
              />
            </g>
          </g>
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Component: Button snapshots with other props 1`] = `
<div>
  <button
    accessibility="label"
    class="sc-bcHOTY sc-dkHyXG GrQnq"
    disabled=""
    id="label"
    variant="secondary"
  >
    <p
      class="sc-gsMHZj lbQZYp sc-hLljAB cvQGLR"
      disabled=""
    >
      Text
    </p>
  </button>
</div>
`;
